--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav>
             <ul>
                 <li><a href="#home">  HOME  </a></li>
-                <li><a href="https://github.com/VitorPL07">  PROJETOS  </a></li>
+                <li><a target="blank" href="https://github.com/VitorPL07">  PROJETOS  </a></li>
                 <li>
                     <input id="dropdown" type="button" class="dropdown" value="  CONTATO  ">
                     <div id="drop" class="dropdown-content">
