--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="content" id="home">
         <h2>João Vitor Pinto Lopes</h2>
         <div class="profile">
-            <img src="https://web.whatsapp.com/4d5896ec-13ee-4109-8c64-f54a5a0ff4d2" alt="Imagem Teste" width="150" height="150">
+            <img src="image.jpeg" alt="Imagem Teste" width="150" height="150">
             <div class="biography">
                 <p>
                     Olá, me chamo João Vitor Pinto Lopes, tenho 20 anos, estudo programação no curso de Análise e Desenvolvimento de Sistemas no Instituto Federal do Piauí.<br>
